# ai-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docs-organization.md  pyproject.toml
docs/: README.md  architecture.md  change-request-doc.md  change-request.md  context-dump.md  db-schema.md  discuss.md  ideas.md  instructions.md  legacy-warning.md  links.md  plan.md  project.md  tasks.md  tech-stack.md  testing.md  ui-kit.md
docs/contracts/: README.md
docs/dialogs/: README.md
docs/prompts/: prompts-sprint-1.md  prompts-sprint-2.md  prompts.md
docs/sprints/: current-sprint.md  sprint-2-archive.md  sprint-2-delivery.md
docs/superpowers/specs/: 2026-04-21-mvp-agent-loop-design.md
docs/tasks/: D-01_MVP_AGENT_LOOP.md  D-02_WEB_SEARCH.md  D-03_CLI_MODEL_FLAG.md  D-04_STEP_TIMINGS.md  D-05_AUTO_SAVE_LOGS.md  D-06_TOKEN_USAGE.md  D-07_LEMONADE_TIMINGS.md
src/agent/: __init__.py  __main__.py  agent.py  config.py  executor.py  llm.py  parser.py  prompts.py  tools.py
tests/integration/: test_live.py
tests/unit/: test_agent.py  test_cli.py  test_executor.py  test_parser.py  test_tools.py
